--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,22 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+section{
+  padding: 5px 140px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card{
+  margin: 30px 0px;
+  padding: 20px 40px;
+  border-color: black;
+  border-width: 1px;
+  border-style: solid;
+}
+
+.score {
+  background-color: rgb(226, 226, 226);
+  margin: 10px 0px;
+  padding: 1px 0px;
 }
 
 .App-header {
@@ -24,15 +31,4 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
